Update common config for timecard and supporting drivers.
(cherry picked from commit 3dbc279907ca765b78e8fdfc4f02f5b9c5942288)
Signed-off-by: Jonathan Lemon <jonathan.lemon@gmail.com>

--- a/facebook/config/common.config
+++ b/facebook/config/common.config
@@ -409,7 +409,7 @@ CONFIG_CC_HAS_WORKING_NOSANITIZE_ADDRESS=y
 CONFIG_CC_IS_GCC=y
 CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
-CONFIG_CC_VERSION_TEXT="gcc (GCC) 8.4.1 20200928 (Red Hat 8.4.1-1)"
+CONFIG_CC_VERSION_TEXT="gcc (GCC) 9.x 20200523 (Facebook) 10.x"
 CONFIG_CDROM=m
 CONFIG_CDROM_PKTCDVD=m
 CONFIG_CDROM_PKTCDVD_BUFFERS=8
@@ -533,6 +533,7 @@ CONFIG_CPU_SUP_INTEL=y
 CONFIG_CPU_SUP_ZHAOXIN=y
 CONFIG_CRAMFS=m
 CONFIG_CRAMFS_BLOCKDEV=y
+# CONFIG_CRAMFS_MTD is not set
 CONFIG_CRASH_CORE=y
 CONFIG_CRASH_DUMP=y
 CONFIG_CRC16=y
@@ -943,7 +944,9 @@ CONFIG_EDAC_X38=m
 CONFIG_EDD=y
 # CONFIG_EDD_OFF is not set
 # CONFIG_EEPROM_93CX6 is not set
+# CONFIG_EEPROM_93XX46 is not set
 # CONFIG_EEPROM_AT24 is not set
+# CONFIG_EEPROM_AT25 is not set
 # CONFIG_EEPROM_EE1004 is not set
 # CONFIG_EEPROM_IDT_89HPESX is not set
 # CONFIG_EEPROM_LEGACY is not set
@@ -999,6 +1002,7 @@ CONFIG_EXT4_FS_SECURITY=y
 CONFIG_EXT4_USE_FOR_EXT2=y
 # CONFIG_EXTCON is not set
 CONFIG_EXTRA_FIRMWARE=""
+# CONFIG_EZX_PCAP is not set
 # CONFIG_F2FS_FS is not set
 # CONFIG_F71808E_WDT is not set
 CONFIG_FAILOVER=m
@@ -1053,6 +1057,7 @@ CONFIG_FS_POSIX_ACL=y
 CONFIG_FS_VERITY=y
 CONFIG_FS_VERITY_BUILTIN_SIGNATURES=y
 CONFIG_FS_VERITY_DEBUG=y
+# CONFIG_FTL is not set
 CONFIG_FTRACE=y
 CONFIG_FTRACE_MCOUNT_RECORD=y
 CONFIG_FTRACE_MCOUNT_USE_CC=y
@@ -1083,7 +1088,8 @@ CONFIG_FW_LOADER_PAGED_BUF=y
 # CONFIG_GACT_PROB is not set
 # CONFIG_GAMEPORT is not set
 # CONFIG_GART_IOMMU is not set
-CONFIG_GCC_VERSION=80401
+# CONFIG_GCC_PLUGINS is not set
+CONFIG_GCC_VERSION=90300
 # CONFIG_GCOV_KERNEL is not set
 # CONFIG_GDB_SCRIPTS is not set
 CONFIG_GENERIC_ALLOCATOR=y
@@ -1453,7 +1459,7 @@ CONFIG_I2C_SMBUS=m
 # CONFIG_I2C_TINY_USB is not set
 # CONFIG_I2C_VIA is not set
 # CONFIG_I2C_VIAPRO is not set
-# CONFIG_I2C_XILINX is not set
+CONFIG_I2C_XILINX=m
 # CONFIG_I3C is not set
 # CONFIG_I40E is not set
 # CONFIG_I40EVF is not set
@@ -1506,6 +1512,7 @@ CONFIG_INET_TUNNEL=m
 CONFIG_INET_UDP_DIAG=m
 CONFIG_INET_XFRM_TUNNEL=m
 # CONFIG_INFINIBAND is not set
+# CONFIG_INFTL is not set
 CONFIG_INITRAMFS_SOURCE=""
 CONFIG_INIT_ENV_ARG_LIMIT=32
 # CONFIG_INIT_ON_ALLOC_DEFAULT_ON is not set
@@ -1740,6 +1747,7 @@ CONFIG_IXGBE_DCB=y
 CONFIG_IXGBE_HWMON=y
 CONFIG_JBD2=y
 # CONFIG_JBD2_DEBUG is not set
+# CONFIG_JFFS2_FS is not set
 # CONFIG_JFS_FS is not set
 # CONFIG_JME is not set
 CONFIG_JOLIET=y
@@ -1766,6 +1774,7 @@ CONFIG_KEXEC_FILE=y
 # CONFIG_KEXEC_SIG is not set
 # CONFIG_KEYBOARD_ADP5588 is not set
 # CONFIG_KEYBOARD_ADP5589 is not set
+# CONFIG_KEYBOARD_APPLESPI is not set
 CONFIG_KEYBOARD_ATKBD=y
 # CONFIG_KEYBOARD_DLINK_DIR685 is not set
 # CONFIG_KEYBOARD_LKKBD is not set
@@ -1815,6 +1824,7 @@ CONFIG_KVM_XFER_TO_GUEST_WORK=y
 # CONFIG_L2TP is not set
 # CONFIG_LAPB is not set
 # CONFIG_LATENCYTOP is not set
+# CONFIG_LATTICE_ECP3_CONFIG is not set
 # CONFIG_LCD_CLASS_DEVICE is not set
 CONFIG_LDISC_AUTOLOAD=y
 # CONFIG_LDM_PARTITION is not set
@@ -1830,6 +1840,7 @@ CONFIG_LEDS_CLASS=m
 # CONFIG_LEDS_CLASS_FLASH is not set
 # CONFIG_LEDS_CLASS_MULTICOLOR is not set
 # CONFIG_LEDS_CLEVO_MAIL is not set
+# CONFIG_LEDS_DAC124S085 is not set
 # CONFIG_LEDS_INTEL_SS4200 is not set
 # CONFIG_LEDS_LM3530 is not set
 # CONFIG_LEDS_LM3532 is not set
@@ -1843,6 +1854,7 @@ CONFIG_LEDS_CLASS=m
 # CONFIG_LEDS_PCA955X is not set
 # CONFIG_LEDS_PCA963X is not set
 # CONFIG_LEDS_TCA6507 is not set
+# CONFIG_LEDS_TI_LMU_COMMON is not set
 # CONFIG_LEDS_TLC591XX is not set
 # CONFIG_LEDS_TRIGGERS is not set
 # CONFIG_LEDS_USER is not set
@@ -1951,12 +1963,14 @@ CONFIG_MESSAGE_LOGLEVEL_DEFAULT=4
 # CONFIG_MFD_88PM805 is not set
 # CONFIG_MFD_88PM860X is not set
 # CONFIG_MFD_ARIZONA_I2C is not set
+# CONFIG_MFD_ARIZONA_SPI is not set
 # CONFIG_MFD_AS3711 is not set
 # CONFIG_MFD_AXP20X_I2C is not set
 # CONFIG_MFD_BCM590XX is not set
 # CONFIG_MFD_BD9571MWV is not set
 CONFIG_MFD_CORE=m
 # CONFIG_MFD_DA9052_I2C is not set
+# CONFIG_MFD_DA9052_SPI is not set
 # CONFIG_MFD_DA9055 is not set
 # CONFIG_MFD_DA9062 is not set
 # CONFIG_MFD_DA9063 is not set
@@ -1964,6 +1978,7 @@ CONFIG_MFD_CORE=m
 # CONFIG_MFD_DLN2 is not set
 # CONFIG_MFD_INTEL_LPSS_ACPI is not set
 # CONFIG_MFD_INTEL_LPSS_PCI is not set
+# CONFIG_MFD_INTEL_M10_BMC is not set
 # CONFIG_MFD_INTEL_PMT is not set
 # CONFIG_MFD_INTEL_QUARK_I2C_GPIO is not set
 # CONFIG_MFD_IQS62X is not set
@@ -1981,6 +1996,7 @@ CONFIG_MFD_CORE=m
 # CONFIG_MFD_MAX8997 is not set
 # CONFIG_MFD_MAX8998 is not set
 # CONFIG_MFD_MC13XXX_I2C is not set
+# CONFIG_MFD_MC13XXX_SPI is not set
 # CONFIG_MFD_MENF21BMC is not set
 # CONFIG_MFD_MP2629 is not set
 # CONFIG_MFD_MT6360 is not set
@@ -2003,16 +2019,19 @@ CONFIG_MFD_CORE=m
 # CONFIG_MFD_TPS65090 is not set
 # CONFIG_MFD_TPS6586X is not set
 # CONFIG_MFD_TPS65912_I2C is not set
+# CONFIG_MFD_TPS65912_SPI is not set
 # CONFIG_MFD_TPS80031 is not set
 # CONFIG_MFD_TQMX86 is not set
 # CONFIG_MFD_VIPERBOARD is not set
 # CONFIG_MFD_VX855 is not set
 # CONFIG_MFD_WL1273_CORE is not set
 # CONFIG_MFD_WM831X_I2C is not set
+# CONFIG_MFD_WM831X_SPI is not set
 # CONFIG_MFD_WM8350_I2C is not set
 # CONFIG_MFD_WM8400 is not set
 # CONFIG_MFD_WM8994 is not set
 # CONFIG_MHI_BUS is not set
+# CONFIG_MICREL_KS8995MA is not set
 # CONFIG_MICREL_PHY is not set
 # CONFIG_MICROCHIP_PHY is not set
 # CONFIG_MICROCHIP_T1_PHY is not set
@@ -2046,6 +2065,8 @@ CONFIG_MLX5_EN_RXNFC=y
 CONFIG_MLX5_MPFS=y
 # CONFIG_MLX5_SF is not set
 CONFIG_MLXFW=y
+# CONFIG_MLXREG_HOTPLUG is not set
+# CONFIG_MLXREG_IO is not set
 # CONFIG_MLXSW_CORE is not set
 # CONFIG_MLX_WDT is not set
 # CONFIG_MMC is not set
@@ -2078,7 +2099,51 @@ CONFIG_MQ_IOSCHED_DEADLINE=y
 CONFIG_MQ_IOSCHED_KYBER=y
 CONFIG_MSDOS_FS=y
 CONFIG_MSDOS_PARTITION=y
-# CONFIG_MTD is not set
+CONFIG_MTD=m
+# CONFIG_MTD_ABSENT is not set
+# CONFIG_MTD_AR7_PARTS is not set
+# CONFIG_MTD_BLOCK is not set
+# CONFIG_MTD_BLOCK2MTD is not set
+# CONFIG_MTD_BLOCK_RO is not set
+# CONFIG_MTD_CFI is not set
+CONFIG_MTD_CFI_I1=y
+CONFIG_MTD_CFI_I2=y
+# CONFIG_MTD_CMDLINE_PARTS is not set
+# CONFIG_MTD_COMPLEX_MAPPINGS is not set
+# CONFIG_MTD_DATAFLASH is not set
+# CONFIG_MTD_DOCG3 is not set
+# CONFIG_MTD_HYPERBUS is not set
+# CONFIG_MTD_INTEL_VR_NOR is not set
+# CONFIG_MTD_JEDECPROBE is not set
+# CONFIG_MTD_LPDDR is not set
+CONFIG_MTD_MAP_BANK_WIDTH_1=y
+CONFIG_MTD_MAP_BANK_WIDTH_2=y
+CONFIG_MTD_MAP_BANK_WIDTH_4=y
+# CONFIG_MTD_MCHP23K256 is not set
+# CONFIG_MTD_MTDRAM is not set
+# CONFIG_MTD_NAND_ECC_SW_BCH is not set
+# CONFIG_MTD_NAND_ECC_SW_HAMMING is not set
+# CONFIG_MTD_ONENAND is not set
+# CONFIG_MTD_OOPS is not set
+# CONFIG_MTD_PARTITIONED_MASTER is not set
+# CONFIG_MTD_PHRAM is not set
+# CONFIG_MTD_PLATRAM is not set
+# CONFIG_MTD_PMC551 is not set
+# CONFIG_MTD_RAM is not set
+# CONFIG_MTD_RAW_NAND is not set
+# CONFIG_MTD_REDBOOT_PARTS is not set
+# CONFIG_MTD_ROM is not set
+# CONFIG_MTD_SLRAM is not set
+# CONFIG_MTD_SPI_NAND is not set
+CONFIG_MTD_SPI_NOR=m
+# CONFIG_MTD_SPI_NOR_SWP_DISABLE is not set
+CONFIG_MTD_SPI_NOR_SWP_DISABLE_ON_VOLATILE=y
+# CONFIG_MTD_SPI_NOR_SWP_KEEP is not set
+CONFIG_MTD_SPI_NOR_USE_4K_SECTORS=y
+# CONFIG_MTD_SST25L is not set
+# CONFIG_MTD_SWAP is not set
+# CONFIG_MTD_TESTS is not set
+# CONFIG_MTD_UBI is not set
 CONFIG_MTRR=y
 # CONFIG_MTRR_SANITIZER is not set
 CONFIG_MULTIUSER=y
@@ -2388,6 +2453,7 @@ CONFIG_NFS_V3=m
 CONFIG_NFS_V3_ACL=y
 CONFIG_NFS_V4=m
 # CONFIG_NFS_V4_1 is not set
+# CONFIG_NFTL is not set
 CONFIG_NF_CONNTRACK=m
 # CONFIG_NF_CONNTRACK_AMANDA is not set
 # CONFIG_NF_CONNTRACK_BRIDGE is not set
@@ -2762,6 +2828,8 @@ CONFIG_RD_ZSTD=y
 CONFIG_READ_ONLY_THP_FOR_FS=y
 # CONFIG_REALTEK_PHY is not set
 # CONFIG_REED_SOLOMON_TEST is not set
+CONFIG_REGMAP=y
+CONFIG_REGMAP_MMIO=m
 # CONFIG_REGULATOR is not set
 # CONFIG_REISERFS_FS is not set
 CONFIG_RELAY=y
@@ -2771,6 +2839,7 @@ CONFIG_RELOCATABLE=y
 # CONFIG_RESET_ATTACK_MITIGATION is not set
 # CONFIG_RESET_CONTROLLER is not set
 # CONFIG_RETPOLINE is not set
+# CONFIG_RFD_FTL is not set
 # CONFIG_RFKILL is not set
 CONFIG_RFS_ACCEL=y
 CONFIG_RING_BUFFER=y
@@ -2795,8 +2864,13 @@ CONFIG_RTC_CLASS=y
 # CONFIG_RTC_DRV_BQ4802 is not set
 CONFIG_RTC_DRV_CMOS=y
 # CONFIG_RTC_DRV_DS1286 is not set
+# CONFIG_RTC_DRV_DS1302 is not set
+# CONFIG_RTC_DRV_DS1305 is not set
 # CONFIG_RTC_DRV_DS1307 is not set
+# CONFIG_RTC_DRV_DS1343 is not set
+# CONFIG_RTC_DRV_DS1347 is not set
 # CONFIG_RTC_DRV_DS1374 is not set
+# CONFIG_RTC_DRV_DS1390 is not set
 # CONFIG_RTC_DRV_DS1511 is not set
 # CONFIG_RTC_DRV_DS1553 is not set
 # CONFIG_RTC_DRV_DS1672 is not set
@@ -2810,23 +2884,32 @@ CONFIG_RTC_DRV_CMOS=y
 # CONFIG_RTC_DRV_ISL12022 is not set
 # CONFIG_RTC_DRV_ISL1208 is not set
 # CONFIG_RTC_DRV_M41T80 is not set
+# CONFIG_RTC_DRV_M41T93 is not set
+# CONFIG_RTC_DRV_M41T94 is not set
 # CONFIG_RTC_DRV_M48T35 is not set
 # CONFIG_RTC_DRV_M48T59 is not set
 # CONFIG_RTC_DRV_M48T86 is not set
 # CONFIG_RTC_DRV_MAX6900 is not set
+# CONFIG_RTC_DRV_MAX6902 is not set
+# CONFIG_RTC_DRV_MAX6916 is not set
+# CONFIG_RTC_DRV_MCP795 is not set
 # CONFIG_RTC_DRV_MSM6242 is not set
+# CONFIG_RTC_DRV_PCF2123 is not set
 # CONFIG_RTC_DRV_PCF2127 is not set
 # CONFIG_RTC_DRV_PCF85063 is not set
 # CONFIG_RTC_DRV_PCF8523 is not set
 # CONFIG_RTC_DRV_PCF85363 is not set
 # CONFIG_RTC_DRV_PCF8563 is not set
 # CONFIG_RTC_DRV_PCF8583 is not set
+# CONFIG_RTC_DRV_R9701 is not set
 # CONFIG_RTC_DRV_RP5C01 is not set
+# CONFIG_RTC_DRV_RS5C348 is not set
 # CONFIG_RTC_DRV_RS5C372 is not set
 # CONFIG_RTC_DRV_RV3028 is not set
 # CONFIG_RTC_DRV_RV3029C2 is not set
 # CONFIG_RTC_DRV_RV3032 is not set
 # CONFIG_RTC_DRV_RV8803 is not set
+# CONFIG_RTC_DRV_RX4581 is not set
 # CONFIG_RTC_DRV_RX6110 is not set
 # CONFIG_RTC_DRV_RX8010 is not set
 # CONFIG_RTC_DRV_RX8025 is not set
@@ -2975,9 +3058,11 @@ CONFIG_SELECT_MEMORY_MODEL=y
 # CONFIG_SENSORS_ABITUGURU is not set
 # CONFIG_SENSORS_ABITUGURU3 is not set
 # CONFIG_SENSORS_ACPI_POWER is not set
+# CONFIG_SENSORS_AD7314 is not set
 # CONFIG_SENSORS_AD7414 is not set
 # CONFIG_SENSORS_AD7418 is not set
 # CONFIG_SENSORS_ADC128D818 is not set
+# CONFIG_SENSORS_ADCXX is not set
 # CONFIG_SENSORS_ADM1021 is not set
 # CONFIG_SENSORS_ADM1025 is not set
 # CONFIG_SENSORS_ADM1026 is not set
@@ -2986,6 +3071,8 @@ CONFIG_SELECT_MEMORY_MODEL=y
 # CONFIG_SENSORS_ADM1177 is not set
 # CONFIG_SENSORS_ADM9240 is not set
 # CONFIG_SENSORS_ADS7828 is not set
+# CONFIG_SENSORS_ADS7871 is not set
+# CONFIG_SENSORS_ADT7310 is not set
 # CONFIG_SENSORS_ADT7410 is not set
 # CONFIG_SENSORS_ADT7411 is not set
 # CONFIG_SENSORS_ADT7462 is not set
@@ -3040,6 +3127,7 @@ CONFIG_SENSORS_CORETEMP=m
 # CONFIG_SENSORS_LINEAGE is not set
 # CONFIG_SENSORS_LIS3_I2C is not set
 # CONFIG_SENSORS_LM63 is not set
+# CONFIG_SENSORS_LM70 is not set
 # CONFIG_SENSORS_LM73 is not set
 # CONFIG_SENSORS_LM75 is not set
 # CONFIG_SENSORS_LM77 is not set
@@ -3056,6 +3144,7 @@ CONFIG_SENSORS_CORETEMP=m
 # CONFIG_SENSORS_LM95245 is not set
 # CONFIG_SENSORS_LTC2945 is not set
 # CONFIG_SENSORS_LTC2947_I2C is not set
+# CONFIG_SENSORS_LTC2947_SPI is not set
 # CONFIG_SENSORS_LTC2990 is not set
 # CONFIG_SENSORS_LTC4151 is not set
 # CONFIG_SENSORS_LTC4215 is not set
@@ -3063,11 +3152,13 @@ CONFIG_SENSORS_CORETEMP=m
 # CONFIG_SENSORS_LTC4245 is not set
 # CONFIG_SENSORS_LTC4260 is not set
 # CONFIG_SENSORS_LTC4261 is not set
+# CONFIG_SENSORS_MAX1111 is not set
 # CONFIG_SENSORS_MAX127 is not set
 # CONFIG_SENSORS_MAX16065 is not set
 # CONFIG_SENSORS_MAX1619 is not set
 # CONFIG_SENSORS_MAX1668 is not set
 # CONFIG_SENSORS_MAX197 is not set
+# CONFIG_SENSORS_MAX31722 is not set
 # CONFIG_SENSORS_MAX31730 is not set
 # CONFIG_SENSORS_MAX31790 is not set
 # CONFIG_SENSORS_MAX6621 is not set
@@ -3158,6 +3249,8 @@ CONFIG_SERIAL_EARLYCON=y
 # CONFIG_SERIAL_FSL_LPUART is not set
 # CONFIG_SERIAL_JSM is not set
 # CONFIG_SERIAL_LANTIQ is not set
+# CONFIG_SERIAL_MAX3100 is not set
+# CONFIG_SERIAL_MAX310X is not set
 CONFIG_SERIAL_NONSTANDARD=y
 # CONFIG_SERIAL_RP2 is not set
 # CONFIG_SERIAL_SC16IS7XX is not set
@@ -3201,6 +3294,7 @@ CONFIG_SMP=y
 # CONFIG_SMSC37B787_WDT is not set
 # CONFIG_SMSC_PHY is not set
 # CONFIG_SMSC_SCH311X_WDT is not set
+# CONFIG_SM_FTL is not set
 CONFIG_SND=m
 # CONFIG_SND_BCD2000 is not set
 # CONFIG_SND_DEBUG is not set
@@ -3218,6 +3312,7 @@ CONFIG_SND_PROC_FS=y
 CONFIG_SND_RAWMIDI=m
 # CONFIG_SND_SEQUENCER is not set
 # CONFIG_SND_SOC is not set
+# CONFIG_SND_SPI is not set
 # CONFIG_SND_SUPPORT_OLD_API is not set
 CONFIG_SND_TIMER=m
 CONFIG_SND_USB=y
@@ -3250,7 +3345,34 @@ CONFIG_SPARSEMEM_MANUAL=y
 CONFIG_SPARSEMEM_VMEMMAP=y
 CONFIG_SPARSEMEM_VMEMMAP_ENABLE=y
 CONFIG_SPARSE_IRQ=y
-# CONFIG_SPI is not set
+CONFIG_SPI=y
+CONFIG_SPI_ALTERA=m
+# CONFIG_SPI_AMD is not set
+# CONFIG_SPI_AXI_SPI_ENGINE is not set
+CONFIG_SPI_BITBANG=m
+# CONFIG_SPI_CADENCE is not set
+# CONFIG_SPI_DEBUG is not set
+# CONFIG_SPI_DESIGNWARE is not set
+CONFIG_SPI_DYNAMIC=y
+# CONFIG_SPI_INTEL_SPI_PCI is not set
+# CONFIG_SPI_INTEL_SPI_PLATFORM is not set
+# CONFIG_SPI_LANTIQ_SSC is not set
+# CONFIG_SPI_LOOPBACK_TEST is not set
+CONFIG_SPI_MASTER=y
+CONFIG_SPI_MEM=y
+# CONFIG_SPI_MUX is not set
+# CONFIG_SPI_MXIC is not set
+# CONFIG_SPI_NXP_FLEXSPI is not set
+# CONFIG_SPI_PXA2XX is not set
+# CONFIG_SPI_ROCKCHIP is not set
+# CONFIG_SPI_SC18IS602 is not set
+# CONFIG_SPI_SIFIVE is not set
+# CONFIG_SPI_SLAVE is not set
+# CONFIG_SPI_SPIDEV is not set
+# CONFIG_SPI_TLE62X0 is not set
+# CONFIG_SPI_XCOMM is not set
+CONFIG_SPI_XILINX=m
+# CONFIG_SPI_ZYNQMP_GQSPI is not set
 CONFIG_SPLIT_PTLOCK_CPUS=4
 # CONFIG_SPMI is not set
 CONFIG_SQUASHFS=m
@@ -3272,6 +3394,7 @@ CONFIG_SQUASHFS_ZSTD=y
 CONFIG_SRCU=y
 # CONFIG_SSB is not set
 CONFIG_SSB_POSSIBLE=y
+# CONFIG_SSFDC is not set
 CONFIG_STACKPROTECTOR=y
 CONFIG_STACKPROTECTOR_STRONG=y
 CONFIG_STACKTRACE=y
@@ -3345,7 +3468,9 @@ CONFIG_TCG_TIS_I2C_ATMEL=m
 # CONFIG_TCG_TIS_I2C_CR50 is not set
 CONFIG_TCG_TIS_I2C_INFINEON=m
 CONFIG_TCG_TIS_I2C_NUVOTON=m
+# CONFIG_TCG_TIS_SPI is not set
 # CONFIG_TCG_TIS_ST33ZP24_I2C is not set
+# CONFIG_TCG_TIS_ST33ZP24_SPI is not set
 CONFIG_TCG_TPM=y
 # CONFIG_TCG_VTPM_PROXY is not set
 CONFIG_TCP_CONG_ADVANCED=y
@@ -3556,6 +3681,7 @@ CONFIG_USB_HID=y
 # CONFIG_USB_LEGOTOWER is not set
 # CONFIG_USB_LGM_PHY is not set
 # CONFIG_USB_LINK_LAYER_TEST is not set
+# CONFIG_USB_MAX3421_HCD is not set
 # CONFIG_USB_MDC800 is not set
 # CONFIG_USB_MICROTEK is not set
 # CONFIG_USB_MON is not set
