--- a/facebook/config/common.config
+++ b/facebook/config/common.config
@@ -81,7 +81,7 @@ CONFIG_ALLOW_DEV_COREDUMP=y
 # CONFIG_ALTERA_STAPL is not set
 # CONFIG_ALTERA_TSE is not set
 # CONFIG_AMD_IOMMU is not set
-# CONFIG_AMD_MEM_ENCRYPT is not set
+CONFIG_AMD_MEM_ENCRYPT=y
 CONFIG_AMD_NB=y
 # CONFIG_AMD_NUMA is not set
 # CONFIG_AMD_PHY is not set
@@ -607,7 +607,8 @@ CONFIG_CRYPTO_DES=m
 # CONFIG_CRYPTO_DEV_AMLOGIC_GXL is not set
 # CONFIG_CRYPTO_DEV_ATMEL_ECC is not set
 # CONFIG_CRYPTO_DEV_ATMEL_SHA204A is not set
-# CONFIG_CRYPTO_DEV_CCP is not set
+CONFIG_CRYPTO_DEV_CCP=y
+CONFIG_CRYPTO_DEV_CCP_DD=m
 # CONFIG_CRYPTO_DEV_NITROX_CNN55XX is not set
 # CONFIG_CRYPTO_DEV_PADLOCK is not set
 # CONFIG_CRYPTO_DEV_QAT_4XXX is not set
@@ -618,6 +619,7 @@ CONFIG_CRYPTO_DES=m
 # CONFIG_CRYPTO_DEV_QAT_DH895xCC is not set
 # CONFIG_CRYPTO_DEV_QAT_DH895xCCVF is not set
 # CONFIG_CRYPTO_DEV_SAFEXCEL is not set
+CONFIG_CRYPTO_DEV_SP_PSP=y
 CONFIG_CRYPTO_DEV_VIRTIO=m
 # CONFIG_CRYPTO_DH is not set
 CONFIG_CRYPTO_DRBG=y
@@ -1802,6 +1804,7 @@ CONFIG_KSM=y
 # CONFIG_KUNIT is not set
 CONFIG_KVM=m
 CONFIG_KVM_AMD=m
+CONFIG_KVM_AMD_SEV=y
 CONFIG_KVM_ASYNC_PF=y
 CONFIG_KVM_COMPAT=y
 CONFIG_KVM_GENERIC_DIRTYLOG_READ_PROTECT=y
