--- a/facebook/config/common.config
+++ b/facebook/config/common.config
@@ -902,7 +902,7 @@ CONFIG_DUMMY_CONSOLE_ROWS=25
 # CONFIG_DW_EDMA is not set
 # CONFIG_DW_EDMA_PCIE is not set
 # CONFIG_DW_WATCHDOG is not set
-# CONFIG_DYNAMIC_DEBUG is not set
+CONFIG_DYNAMIC_DEBUG=y
 # CONFIG_DYNAMIC_DEBUG_CORE is not set
 CONFIG_DYNAMIC_EVENTS=y
 CONFIG_DYNAMIC_FTRACE=y
