--- a/facebook/config/common.config
+++ b/facebook/config/common.config
@@ -82,6 +82,7 @@ CONFIG_ALLOW_DEV_COREDUMP=y
 # CONFIG_ALTERA_TSE is not set
 # CONFIG_AMD_IOMMU is not set
 CONFIG_AMD_MEM_ENCRYPT=y
+CONFIG_AMD_MEM_ENCRYPT_ACTIVE_BY_DEFAULT=y
 CONFIG_AMD_NB=y
 # CONFIG_AMD_NUMA is not set
 # CONFIG_AMD_PHY is not set
@@ -113,6 +114,7 @@ CONFIG_ARCH_HAS_ELFCORE_COMPAT=y
 CONFIG_ARCH_HAS_ELF_RANDOMIZE=y
 CONFIG_ARCH_HAS_FAST_MULTIPLIER=y
 CONFIG_ARCH_HAS_FILTER_PGPROT=y
+CONFIG_ARCH_HAS_FORCE_DMA_UNENCRYPTED=y
 CONFIG_ARCH_HAS_FORTIFY_SOURCE=y
 CONFIG_ARCH_HAS_GCOV_PROFILE_ALL=y
 CONFIG_ARCH_HAS_GIGANTIC_PAGE=y
@@ -409,7 +411,7 @@ CONFIG_CC_HAS_WORKING_NOSANITIZE_ADDRESS=y
 CONFIG_CC_IS_GCC=y
 CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
-CONFIG_CC_VERSION_TEXT="gcc (GCC) 9.x 20200523 (Facebook) 10.x"
+CONFIG_CC_VERSION_TEXT="gcc (GCC) 8.5.0 20210514 (Red Hat 8.5.0-2)"
 CONFIG_CDROM=m
 CONFIG_CDROM_PKTCDVD=m
 CONFIG_CDROM_PKTCDVD_BUFFERS=8
@@ -609,7 +611,9 @@ CONFIG_CRYPTO_DES=m
 # CONFIG_CRYPTO_DEV_ATMEL_ECC is not set
 # CONFIG_CRYPTO_DEV_ATMEL_SHA204A is not set
 CONFIG_CRYPTO_DEV_CCP=y
+CONFIG_CRYPTO_DEV_CCP_CRYPTO=m
 CONFIG_CRYPTO_DEV_CCP_DD=m
+# CONFIG_CRYPTO_DEV_CCP_DEBUGFS is not set
 # CONFIG_CRYPTO_DEV_NITROX_CNN55XX is not set
 # CONFIG_CRYPTO_DEV_PADLOCK is not set
 # CONFIG_CRYPTO_DEV_QAT_4XXX is not set
@@ -620,6 +624,7 @@ CONFIG_CRYPTO_DEV_CCP_DD=m
 # CONFIG_CRYPTO_DEV_QAT_DH895xCC is not set
 # CONFIG_CRYPTO_DEV_QAT_DH895xCCVF is not set
 # CONFIG_CRYPTO_DEV_SAFEXCEL is not set
+CONFIG_CRYPTO_DEV_SP_CCP=y
 CONFIG_CRYPTO_DEV_SP_PSP=y
 CONFIG_CRYPTO_DEV_VIRTIO=m
 # CONFIG_CRYPTO_DH is not set
@@ -837,6 +842,7 @@ CONFIG_DMAR_TABLE=y
 CONFIG_DMA_ACPI=y
 # CONFIG_DMA_API_DEBUG is not set
 CONFIG_DMA_CMA=y
+CONFIG_DMA_COHERENT_POOL=y
 CONFIG_DMA_ENGINE=y
 CONFIG_DMA_ENGINE_RAID=y
 # CONFIG_DMA_MAP_BENCHMARK is not set
@@ -904,11 +910,12 @@ CONFIG_DUMMY_CONSOLE_ROWS=25
 # CONFIG_DW_EDMA_PCIE is not set
 # CONFIG_DW_WATCHDOG is not set
 CONFIG_DYNAMIC_DEBUG=y
-# CONFIG_DYNAMIC_DEBUG_CORE is not set
+CONFIG_DYNAMIC_DEBUG_CORE=y
 CONFIG_DYNAMIC_EVENTS=y
 CONFIG_DYNAMIC_FTRACE=y
 CONFIG_DYNAMIC_FTRACE_WITH_DIRECT_CALLS=y
 CONFIG_DYNAMIC_FTRACE_WITH_REGS=y
+CONFIG_DYNAMIC_PHYSICAL_MASK=y
 # CONFIG_E100 is not set
 CONFIG_E1000=m
 CONFIG_E1000E=m
@@ -1090,8 +1097,7 @@ CONFIG_FW_LOADER_PAGED_BUF=y
 # CONFIG_GACT_PROB is not set
 # CONFIG_GAMEPORT is not set
 # CONFIG_GART_IOMMU is not set
-# CONFIG_GCC_PLUGINS is not set
-CONFIG_GCC_VERSION=90300
+CONFIG_GCC_VERSION=80500
 # CONFIG_GCOV_KERNEL is not set
 # CONFIG_GDB_SCRIPTS is not set
 CONFIG_GENERIC_ALLOCATOR=y
@@ -3511,6 +3517,7 @@ CONFIG_TEST_BPF=m
 # CONFIG_TEST_KMOD is not set
 # CONFIG_TEST_KSTRTOX is not set
 # CONFIG_TEST_LIST_SORT is not set
+# CONFIG_TEST_LIVEPATCH is not set
 # CONFIG_TEST_LKM is not set
 # CONFIG_TEST_LOCKUP is not set
 # CONFIG_TEST_MEMCAT_P is not set
