config: CONFIG_NUMA_BALANCING=y, but default-disabled
This is for CXL-attached memory prod experiments.

--- a/facebook/config/common.config
+++ b/facebook/config/common.config
@@ -2579,7 +2579,8 @@ CONFIG_NR_CPUS_RANGE_END=512
 # CONFIG_NTFS_FS is not set
 # CONFIG_NULL_TTY is not set
 CONFIG_NUMA=y
-# CONFIG_NUMA_BALANCING is not set
+CONFIG_NUMA_BALANCING=y
+# CONFIG_NUMA_BALANCING_DEFAULT_ENABLED is not set
 # CONFIG_NUMA_EMU is not set
 CONFIG_NUMA_KEEP_MEMINFO=y
 CONFIG_NVDIMM_DAX=y
