--- a/facebook/config/common.config
+++ b/facebook/config/common.config
@@ -3638,7 +3638,10 @@ CONFIG_UPROBES=y
 CONFIG_UPROBE_EVENTS=y
 CONFIG_USB=y
 # CONFIG_USB4 is not set
-# CONFIG_USBIP_CORE is not set
+CONFIG_USBIP_CORE=m
+USBIP_VHCI_HCD=m
+USBIP_HOST=n
+USBIP_VUDC=n
 # CONFIG_USBPCWATCHDOG is not set
 # CONFIG_USB_ACM is not set
 # CONFIG_USB_ADUTUX is not set
