Actually commit the correct USBIP config options

--- a/facebook/config/common.config
+++ b/facebook/config/common.config
@@ -3639,9 +3639,11 @@ CONFIG_UPROBE_EVENTS=y
 CONFIG_USB=y
 # CONFIG_USB4 is not set
 CONFIG_USBIP_CORE=m
-USBIP_VHCI_HCD=m
-USBIP_HOST=n
-USBIP_VUDC=n
+CONFIG_USBIP_VHCI_HCD=m
+CONFIG_USBIP_HOST=n
+CONFIG_USBIP_VUDC=n
+CONFIG_USBIP_VHCI_HC_PORTS=8
+CONFIG_USBIP_VHCI_NR_HCS=1
 # CONFIG_USBPCWATCHDOG is not set
 # CONFIG_USB_ACM is not set
 # CONFIG_USB_ADUTUX is not set
