[FB ONLY]: Add CXL support

--- a/facebook/config/common.config
+++ b/facebook/config/common.config
@@ -77,8 +77,10 @@ CONFIG_AIO=y
 # CONFIG_ALIM1535_WDT is not set
 # CONFIG_ALIM7101_WDT is not set
 CONFIG_ALLOW_DEV_COREDUMP=y
+# CONFIG_ALTERA_FREEZE_BRIDGE is not set
 # CONFIG_ALTERA_MBOX is not set
 # CONFIG_ALTERA_MSGDMA is not set
+# CONFIG_ALTERA_PR_IP_CORE is not set
 # CONFIG_ALTERA_STAPL is not set
 # CONFIG_ALTERA_TSE is not set
 # CONFIG_AMD_IOMMU is not set
@@ -414,7 +416,7 @@ CONFIG_CC_HAS_WORKING_NOSANITIZE_ADDRESS=y
 CONFIG_CC_IS_GCC=y
 CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
-CONFIG_CC_VERSION_TEXT="gcc (GCC) 8.5.0 20210514 (Red Hat 8.5.0-2)"
+CONFIG_CC_VERSION_TEXT="gcc (GCC) 9.x 20210712 (Facebook) 10.x"
 CONFIG_CDROM=m
 CONFIG_CDROM_PKTCDVD=m
 CONFIG_CDROM_PKTCDVD_BUFFERS=8
@@ -732,7 +734,11 @@ CONFIG_CRYPTO_XXHASH=y
 CONFIG_CRYPTO_ZSTD=m
 CONFIG_CSD_LOCK_WAIT_DEBUG=y
 # CONFIG_CUSE is not set
-# CONFIG_CXL_BUS is not set
+CONFIG_CXL_ACPI=y
+CONFIG_CXL_BUS=y
+CONFIG_CXL_MEM=y
+CONFIG_CXL_MEM_RAW_COMMANDS=y
+CONFIG_CXL_PMEM=m
 # CONFIG_CX_ECAT is not set
 # CONFIG_CYCLADES is not set
 # CONFIG_DAVICOM_PHY is not set
@@ -1050,7 +1056,24 @@ CONFIG_FONT_8x16=y
 CONFIG_FONT_AUTOSELECT=y
 CONFIG_FONT_SUPPORT=y
 # CONFIG_FORTIFY_SOURCE is not set
-# CONFIG_FPGA is not set
+CONFIG_FPGA=m
+CONFIG_FPGA_BRIDGE=m
+CONFIG_FPGA_DFL=m
+CONFIG_FPGA_DFL_AFU=m
+CONFIG_FPGA_DFL_EMIF=m
+CONFIG_FPGA_DFL_FME=m
+CONFIG_FPGA_DFL_FME_BRIDGE=m
+CONFIG_FPGA_DFL_FME_MGR=m
+CONFIG_FPGA_DFL_FME_REGION=m
+CONFIG_FPGA_DFL_NIOS_INTEL_PAC_N3000=m
+CONFIG_FPGA_DFL_PCI=m
+CONFIG_FPGA_IMAGE_LOAD=m
+CONFIG_FPGA_M10_BMC_SEC_UPDATE=m
+# CONFIG_FPGA_MGR_ALTERA_CVP is not set
+# CONFIG_FPGA_MGR_ALTERA_PS_SPI is not set
+# CONFIG_FPGA_MGR_MACHXO2_SPI is not set
+# CONFIG_FPGA_MGR_XILINX_SPI is not set
+CONFIG_FPGA_REGION=m
 CONFIG_FRAME_WARN=2048
 CONFIG_FREEZER=y
 CONFIG_FRONTSWAP=y
@@ -1100,7 +1123,15 @@ CONFIG_FW_LOADER_PAGED_BUF=y
 # CONFIG_GACT_PROB is not set
 # CONFIG_GAMEPORT is not set
 # CONFIG_GART_IOMMU is not set
-CONFIG_GCC_VERSION=80500
+CONFIG_GCC_PLUGINS=y
+# CONFIG_GCC_PLUGIN_CYC_COMPLEXITY is not set
+# CONFIG_GCC_PLUGIN_LATENT_ENTROPY is not set
+# CONFIG_GCC_PLUGIN_RANDSTRUCT is not set
+# CONFIG_GCC_PLUGIN_STACKLEAK is not set
+# CONFIG_GCC_PLUGIN_STRUCTLEAK_BYREF is not set
+# CONFIG_GCC_PLUGIN_STRUCTLEAK_BYREF_ALL is not set
+# CONFIG_GCC_PLUGIN_STRUCTLEAK_USER is not set
+CONFIG_GCC_VERSION=90300
 # CONFIG_GCOV_KERNEL is not set
 # CONFIG_GDB_SCRIPTS is not set
 CONFIG_GENERIC_ALLOCATOR=y
@@ -1959,7 +1990,7 @@ CONFIG_MEMCG=y
 CONFIG_MEMCG_KMEM=y
 CONFIG_MEMCG_SWAP=y
 CONFIG_MEMFD_CREATE=y
-# CONFIG_MEMORY is not set
+CONFIG_MEMORY=y
 CONFIG_MEMORY_BALLOON=y
 CONFIG_MEMORY_FAILURE=y
 CONFIG_MEMORY_HOTPLUG=y
@@ -1990,7 +2021,8 @@ CONFIG_MFD_CORE=m
 # CONFIG_MFD_DLN2 is not set
 # CONFIG_MFD_INTEL_LPSS_ACPI is not set
 # CONFIG_MFD_INTEL_LPSS_PCI is not set
-# CONFIG_MFD_INTEL_M10_BMC is not set
+CONFIG_MFD_INTEL_M10_BMC_CORE=m
+CONFIG_MFD_INTEL_M10_BMC_SPI=m
 # CONFIG_MFD_INTEL_PMT is not set
 # CONFIG_MFD_INTEL_QUARK_I2C_GPIO is not set
 # CONFIG_MFD_IQS62X is not set
@@ -2790,6 +2822,7 @@ CONFIG_PTP_1588_CLOCK=y
 # CONFIG_PTP_1588_CLOCK_IDT82P33 is not set
 # CONFIG_PTP_1588_CLOCK_IDTCM is not set
 CONFIG_PTP_1588_CLOCK_OCP=m
+CONFIG_PTP_DFL_TOD=m
 # CONFIG_PUNIT_ATOM_DEBUG is not set
 # CONFIG_PVPANIC is not set
 # CONFIG_PWM is not set
@@ -2844,6 +2877,7 @@ CONFIG_READ_ONLY_THP_FOR_FS=y
 # CONFIG_REED_SOLOMON_TEST is not set
 CONFIG_REGMAP=y
 CONFIG_REGMAP_MMIO=m
+CONFIG_REGMAP_SPI_AVMM=m
 # CONFIG_REGULATOR is not set
 # CONFIG_REISERFS_FS is not set
 CONFIG_RELAY=y
@@ -3362,6 +3396,8 @@ CONFIG_SPARSEMEM_VMEMMAP_ENABLE=y
 CONFIG_SPARSE_IRQ=y
 CONFIG_SPI=y
 CONFIG_SPI_ALTERA=m
+CONFIG_SPI_ALTERA_CORE=m
+CONFIG_SPI_ALTERA_DFL=m
 # CONFIG_SPI_AMD is not set
 # CONFIG_SPI_AXI_SPI_ENGINE is not set
 CONFIG_SPI_BITBANG=m
@@ -4020,6 +4056,7 @@ CONFIG_XFS_RT=y
 CONFIG_XFS_SUPPORT_V4=y
 # CONFIG_XFS_WARN is not set
 # CONFIG_XILINX_GMII2RGMII is not set
+# CONFIG_XILINX_PR_DECOUPLER is not set
 # CONFIG_XILINX_SDFEC is not set
 # CONFIG_XILINX_VCU is not set
 # CONFIG_XILINX_WATCHDOG is not set
