--- a/drivers/mfd/Kconfig
+++ b/drivers/mfd/Kconfig
@@ -2143,11 +2143,17 @@ config SGI_MFD_IOC3
 	  If you have an SGI Origin, Octane, or a PCI IOC3 card,
 	  then say Y. Otherwise say N.
 
-config MFD_INTEL_M10_BMC
-	tristate "Intel MAX 10 Board Management Controller"
-	depends on SPI_MASTER
-	select REGMAP_SPI_AVMM
+config MFD_INTEL_M10_BMC_CORE
+	tristate
 	select MFD_CORE
+	select REGMAP
+	default n
+
+config MFD_INTEL_M10_BMC_SPI
+	tristate "Intel MAX 10 Board Management Controller with SPI"
+	depends on SPI_MASTER
+	select MFD_INTEL_M10_BMC_CORE
+	select REGMAP_SPI_AVMM
 	help
 	  Support for the Intel MAX 10 board management controller using the
 	  SPI interface.
